# PocoAgent

./: CMakeLists.txt  FunctionErrorsVariables.h  ISender.cpp  ISender.h  Logger.cpp  Logger.h  PocoAgent.cpp  PocoAgent.h  Requester.cpp  Requester.h  SenderImpl.cpp  ServerTasks.cpp  ServerTasks.h  TaskFactory.cpp  TaskFactory.h  build.bat  for make Win service.txt  parameters_example.json
AgentService/: AgentService.cmake  AgentService.rc  LibraryLoader.h  PluginController.h  PocoAgent.cpp  PocoAgent.h  README.md  RESTInter.cpp  RESTInter.h  ServerTasks.cpp  ServerTasks.h  main.cpp
ControlService/: CRC32.h  Control.h  ControlController.h  ControlService.cmake  ControlService.cpp  ControlService.h  ControlService.rc  main.cpp  version.json.in
Plugins/: AbstractPlugin.cpp  AbstractPlugin.h
Plugins/plugin/: PcapMethods.cpp  PcapMethods.h  PcapStatistics.cpp  PcapStatistics.h  Plugin.cmake  PluginLibrary.cpp  Plugin_version.json
SenderPlugin/: ISender.cpp  ISender.h  SenderPlugin.cmake  SenderPlugin.cpp  SenderPlugin.rc
